Some css modifications to show correctly on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,14 @@
+/* apply a natural box layout model to all elements */
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+#nonuser tr td{
+	min-width: 50px;
+}
+
+#nonuser {
+	max-width: 100%;
+}
+
 .liked {
 	padding-top:10px;
 }
